--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,10 @@ jdk:
   - oraclejdk8
 script:
   - sbt test
+deploy:
+  skip_cleanup: true
+  provider: script
+  script: ./.travis/deploy.sh $TRAVIS_TAG
+  on:
+    condition: '"${TRAVIS_SCALA_VERSION}" == "2.10.6" && "${TRAVIS_JDK_VERSION}" == "oraclejdk8"' 
+    tags: true
