--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -27,7 +27,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         run: sbt makeSite
 
-      - name: Publish to Bintray and Maven central
+      - name: Publish to Maven central
         if: startsWith(github.ref, 'refs/tags/')
         env:
           PGP_PASSPHRASE: ${{ secrets.SONA_PGP_PASSPHRASE }}
