--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -49,7 +49,8 @@ jobs:
             git commit -m "Added Scaladoc for $project_version"
             git push origin gh-pages
 
-      - name: Snyk monitor - Check for vulnerabilities
+      - name: Snyk test for vulnerabilities
+        if: startsWith(github.ref, 'refs/tags/')
         uses: snyk/actions/scala@master
         with:
           command: test
