--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -34,7 +34,7 @@ jobs:
           PGP_SECRET: ${{ secrets.SONA_PGP_SECRET }}
           SONATYPE_USERNAME: ${{ secrets.SONA_USER }}
           SONATYPE_PASSWORD: ${{ secrets.SONA_PASS }}
-        run: sbt +publish
+        run: sbt ci-release
 
       - name: Publish website
         if: startsWith(github.ref, 'refs/tags/')
