--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -23,10 +23,6 @@ jobs:
       - name: Check formatting
         run: sbt scalafmtCheck
 
-      - name: Generate API website
-        if: startsWith(github.ref, 'refs/tags/')
-        run: sbt makeSite
-
       - name: Publish to Maven central
         if: startsWith(github.ref, 'refs/tags/')
         env:
@@ -34,7 +30,11 @@ jobs:
           PGP_SECRET: ${{ secrets.SONA_PGP_SECRET }}
           SONATYPE_USERNAME: ${{ secrets.SONA_USER }}
           SONATYPE_PASSWORD: ${{ secrets.SONA_PASS }}
-        run: sbt +publish
+        run: sbt ci-release
+
+      - name: Generate API website
+        if: startsWith(github.ref, 'refs/tags/')
+        run: sbt makeSite
 
       - name: Publish website
         if: startsWith(github.ref, 'refs/tags/')
