--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -21,3 +21,10 @@ rewrite.rules = [
   RedundantParens,
   PreferCurlyFors
 ]
+runner.dialect = scala212
+
+fileOverride {
+  "glob:**/scala-3/**/*.scala" {
+    runner.dialect = dotty
+  }
+}
