Disable validation of field lengths when parsing event (close #127)

--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -15,7 +15,7 @@ jobs:
           java-version: 11
 
       - name: Run tests
-        run: sbt coverage +test
+        run: sbt 'set coverageEnabled := true' +test
 
       - name: Aggregate coverage data
         run: sbt coverageAggregate
